--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-use-measure": "^2.1.1",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
