--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "react-use-measure": "^2.1.1",
     "recoil": "^0.7.7",
     "resend": "^4.0.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
